Added initialCountry="blank" and flagOnEmptyDialCode options

--- a/spec.html
+++ b/spec.html
@@ -78,6 +78,8 @@
   
   <script src="src/spec/tests/options/excludeCountries.js"></script>
   
+  <script src="src/spec/tests/options/flagOnEmptyPrefix.js"></script>
+  
   <script src="src/spec/tests/options/formatOnInit.js"></script>
   
   <script src="src/spec/tests/options/geoIpLookup.js"></script>
