--- a/examples/gen/national-mode.html
+++ b/examples/gen/national-mode.html
@@ -4,20 +4,18 @@
     <meta charset="utf-8">
     <title>Example: National Mode</title>
     <link rel="stylesheet" href="../css/prism.css">
-    <link rel="stylesheet" href="../../build/css/intlTelInput.css?1456859475147">
-    <link rel="stylesheet" href="../../build/css/demo.css?1456859475147">
+    <link rel="stylesheet" href="../../build/css/intlTelInput.css?1474391106317">
+    <link rel="stylesheet" href="../../build/css/demo.css?1474391106317">
     
 
     <!-- GOOGLE ANALYTICS -->
     <script>
-      var _gaq = _gaq || [];
-      _gaq.push(['_setAccount', 'UA-26178728-1']);
-      _gaq.push(['_trackPageview']);
-      (function() {
-        var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-        ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-      })();
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+      ga('create', 'UA-26178728-1', 'auto');
+      ga('send', 'pageview');
     </script>
     <!-- /GOOGLE ANALYTICS -->
   </head>
@@ -26,7 +24,7 @@
     <a href="/intl-tel-input.html">Back</a>
     <h1>Example: National Mode</h1>
     <p>Allow users to enter their national number, and then convert it to international format using the public method getNumber.</p>
-    
+
     <h2>Markup</h2>
     <pre><code class="language-markup">&lt;p id=&quot;output&quot;&gt;Please enter a number below&lt;/p&gt;
 &lt;input id=&quot;phone&quot; type=&quot;tel&quot;&gt;</code></pre>
@@ -58,7 +56,7 @@ input.on(&quot;keyup change&quot;, function() {
 
     <script src="../js/prism.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-    <script src="../../build/js/intlTelInput.js?1456859475147"></script>
-    <script src="../js/nationalMode.js?1456859475147"></script>
+    <script src="../../build/js/intlTelInput.js?1474391106317"></script>
+    <script src="../js/nationalMode.js?1474391106317"></script>
   </body>
 </html>
