finish updating all dev dependencies

--- a/examples/gen/default-country-ip.html
+++ b/examples/gen/default-country-ip.html
@@ -2,10 +2,10 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Example: Lookup user&#39;s country</title>
+    <title>Example: Lookup user's country</title>
     <link rel="stylesheet" href="../css/prism.css">
-    <link rel="stylesheet" href="../../build/css/intlTelInput.css?1474391106317">
-    <link rel="stylesheet" href="../../build/css/demo.css?1474391106317">
+    <link rel="stylesheet" href="../../build/css/intlTelInput.css?1474679003197">
+    <link rel="stylesheet" href="../../build/css/demo.css?1474679003197">
     
 
     <!-- GOOGLE ANALYTICS -->
@@ -22,8 +22,8 @@
 
   <body>
     <a href="/intl-tel-input.html">Back</a>
-    <h1>Example: Lookup user&#39;s country</h1>
-    <p>Set initialCountry to &#39;auto&#39; and pass in a function for geoIpLookup to perform a JSONP request to ipinfo.io, which returns the user&#39;s country based on their IP address.</p>
+    <h1>Example: Lookup user's country</h1>
+    <p>Set initialCountry to 'auto' and pass in a function for geoIpLookup to perform a JSONP request to ipinfo.io, which returns the user's country based on their IP address.</p>
 
     <h2>Markup</h2>
     <pre><code class="language-markup">&lt;input id=&quot;phone&quot; type=&quot;tel&quot;&gt;</code></pre>
@@ -47,7 +47,7 @@
 
     <script src="../js/prism.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-    <script src="../../build/js/intlTelInput.js?1474391106317"></script>
-    <script src="../js/defaultCountryIp.js?1474391106317"></script>
+    <script src="../../build/js/intlTelInput.js?1474679003197"></script>
+    <script src="../js/defaultCountryIp.js?1474679003197"></script>
   </body>
 </html>
