--- a/examples/gen/is-valid-number.html
+++ b/examples/gen/is-valid-number.html
@@ -4,10 +4,10 @@
     <meta charset="utf-8">
     <title>Example: Validation</title>
     <link rel="stylesheet" href="../css/prism.css">
-    <link rel="stylesheet" href="../../build/css/intlTelInput.css?1474391106317">
-    <link rel="stylesheet" href="../../build/css/demo.css?1474391106317">
+    <link rel="stylesheet" href="../../build/css/intlTelInput.css?1474679003197">
+    <link rel="stylesheet" href="../../build/css/demo.css?1474679003197">
     
-      <link rel="stylesheet" href="../css/isValidNumber.css?1474391106317">
+      <link rel="stylesheet" href="../css/isValidNumber.css?1474679003197">
     
 
     <!-- GOOGLE ANALYTICS -->
@@ -25,7 +25,7 @@
   <body>
     <a href="/intl-tel-input.html">Back</a>
     <h1>Example: Validation</h1>
-    <p>Use public isValidNumber method (utilising Google&#39;s libphonenumber) to validate the telephone number on the change event.</p>
+    <p>Use public isValidNumber method (utilising Google's libphonenumber) to validate the telephone number on the change event.</p>
 
     <h2>Markup</h2>
     <pre><code class="language-markup">&lt;input id=&quot;phone&quot; type=&quot;tel&quot;&gt;
@@ -73,7 +73,7 @@ telInput.on(&quot;keyup change&quot;, reset);</code></pre>
 
     <script src="../js/prism.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-    <script src="../../build/js/intlTelInput.js?1474391106317"></script>
-    <script src="../js/isValidNumber.js?1474391106317"></script>
+    <script src="../../build/js/intlTelInput.js?1474679003197"></script>
+    <script src="../js/isValidNumber.js?1474679003197"></script>
   </body>
 </html>
