--- a/demo.html
+++ b/demo.html
@@ -22,7 +22,7 @@
     $("#phone").intlTelInput({
       // allowDropdown: false,
       // autoHideDialCode: false,
-      // autoPlaceholder: false,
+      // autoPlaceholder: "off",
       // dropdownContainer: "body",
       // excludeCountries: ["us"],
       // geoIpLookup: function(callback) {
