--- a/spec.html
+++ b/spec.html
@@ -96,6 +96,8 @@
   
   <script src="src/spec/tests/options/utilsScript.js"></script>
   
+  <script src="src/spec/tests/static/defaults.js"></script>
+
   <script src="src/spec/tests/static/getCountryData.js"></script>
   
   <script src="src/spec/tests/static/loadUtils.js"></script>
