fix example back button for new demo site

--- a/examples/gen/country-sync.html
+++ b/examples/gen/country-sync.html
@@ -4,10 +4,10 @@
     <meta charset="utf-8">
     <title>Example: Country sync</title>
     <link rel="stylesheet" href="../css/prism.css">
-    <link rel="stylesheet" href="../../build/css/intlTelInput.css?1474679003197">
-    <link rel="stylesheet" href="../../build/css/demo.css?1474679003197">
+    <link rel="stylesheet" href="../../build/css/intlTelInput.css?1475868671107">
+    <link rel="stylesheet" href="../../build/css/demo.css?1475868671107">
     
-      <link rel="stylesheet" href="../css/countrySync.css?1474679003197">
+      <link rel="stylesheet" href="../css/countrySync.css?1475868671107">
     
 
     <!-- GOOGLE ANALYTICS -->
@@ -23,7 +23,7 @@
   </head>
 
   <body>
-    <a href="/intl-tel-input.html">Back</a>
+    <a href="/">Back</a>
     <h1>Example: Country sync</h1>
     <p>Use static getCountryData method to create a separate country dropdown for an address form, and then listen for change events to keep the two dropdowns in sync.</p>
 
@@ -91,7 +91,7 @@ addressDropdown.change(function() {
 
     <script src="../js/prism.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-    <script src="../../build/js/intlTelInput.js?1474679003197"></script>
-    <script src="../js/countrySync.js?1474679003197"></script>
+    <script src="../../build/js/intlTelInput.js?1475868671107"></script>
+    <script src="../js/countrySync.js?1475868671107"></script>
   </body>
 </html>
