--- a/examples/gen/default-country-ip.html
+++ b/examples/gen/default-country-ip.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <title>Example: Lookup user's country</title>
     <link rel="stylesheet" href="../css/prism.css">
-    <link rel="stylesheet" href="../../build/css/intlTelInput.css?1474679003197">
-    <link rel="stylesheet" href="../../build/css/demo.css?1474679003197">
+    <link rel="stylesheet" href="../../build/css/intlTelInput.css?1475868671107">
+    <link rel="stylesheet" href="../../build/css/demo.css?1475868671107">
     
 
     <!-- GOOGLE ANALYTICS -->
@@ -21,7 +21,7 @@
   </head>
 
   <body>
-    <a href="/intl-tel-input.html">Back</a>
+    <a href="/">Back</a>
     <h1>Example: Lookup user's country</h1>
     <p>Set initialCountry to 'auto' and pass in a function for geoIpLookup to perform a JSONP request to ipinfo.io, which returns the user's country based on their IP address.</p>
 
@@ -47,7 +47,7 @@
 
     <script src="../js/prism.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-    <script src="../../build/js/intlTelInput.js?1474679003197"></script>
-    <script src="../js/defaultCountryIp.js?1474679003197"></script>
+    <script src="../../build/js/intlTelInput.js?1475868671107"></script>
+    <script src="../js/defaultCountryIp.js?1475868671107"></script>
   </body>
 </html>
