--- a/examples/gen/modify-country-data.html
+++ b/examples/gen/modify-country-data.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <title>Example: Modify country data</title>
     <link rel="stylesheet" href="../css/prism.css">
-    <link rel="stylesheet" href="../../build/css/intlTelInput.css?1474679003197">
-    <link rel="stylesheet" href="../../build/css/demo.css?1474679003197">
+    <link rel="stylesheet" href="../../build/css/intlTelInput.css?1475868671107">
+    <link rel="stylesheet" href="../../build/css/demo.css?1475868671107">
     
 
     <!-- GOOGLE ANALYTICS -->
@@ -21,7 +21,7 @@
   </head>
 
   <body>
-    <a href="/intl-tel-input.html">Back</a>
+    <a href="/">Back</a>
     <h1>Example: Modify country data</h1>
     <p>Use static getCountryData method to update the data to only show localised country names.</p>
 
@@ -45,7 +45,7 @@ $(&quot;#phone&quot;).intlTelInput({
 
     <script src="../js/prism.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-    <script src="../../build/js/intlTelInput.js?1474679003197"></script>
-    <script src="../js/modifyCountryData.js?1474679003197"></script>
+    <script src="../../build/js/intlTelInput.js?1475868671107"></script>
+    <script src="../js/modifyCountryData.js?1475868671107"></script>
   </body>
 </html>
