--- a/examples/gen/national-mode.html
+++ b/examples/gen/national-mode.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <title>Example: National Mode</title>
     <link rel="stylesheet" href="../css/prism.css">
-    <link rel="stylesheet" href="../../build/css/intlTelInput.css?1474679003197">
-    <link rel="stylesheet" href="../../build/css/demo.css?1474679003197">
+    <link rel="stylesheet" href="../../build/css/intlTelInput.css?1475868671107">
+    <link rel="stylesheet" href="../../build/css/demo.css?1475868671107">
     
 
     <!-- GOOGLE ANALYTICS -->
@@ -21,7 +21,7 @@
   </head>
 
   <body>
-    <a href="/intl-tel-input.html">Back</a>
+    <a href="/">Back</a>
     <h1>Example: National Mode</h1>
     <p>Allow users to enter their national number, and then convert it to international format using the public method getNumber.</p>
 
@@ -56,7 +56,7 @@ input.on(&quot;keyup change&quot;, function() {
 
     <script src="../js/prism.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-    <script src="../../build/js/intlTelInput.js?1474679003197"></script>
-    <script src="../js/nationalMode.js?1474679003197"></script>
+    <script src="../../build/js/intlTelInput.js?1475868671107"></script>
+    <script src="../js/nationalMode.js?1475868671107"></script>
   </body>
 </html>
