--- a/examples/gen/hidden-input.html
+++ b/examples/gen/hidden-input.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <title>Example: Submitting the full international number when in nationalMode</title>
     <link rel="stylesheet" href="../css/prism.css">
-    <link rel="stylesheet" href="../../build/css/intlTelInput.css?1474679003197">
-    <link rel="stylesheet" href="../../build/css/demo.css?1474679003197">
+    <link rel="stylesheet" href="../../build/css/intlTelInput.css?1475868671107">
+    <link rel="stylesheet" href="../../build/css/demo.css?1475868671107">
     
 
     <!-- GOOGLE ANALYTICS -->
@@ -21,7 +21,7 @@
   </head>
 
   <body>
-    <a href="/intl-tel-input.html">Back</a>
+    <a href="/">Back</a>
     <h1>Example: Submitting the full international number when in nationalMode</h1>
     <p>If you're submitting the form using Ajax, simply use getNumber to get the number before sending it. If you're using the standard form POST method, you should use a separate hidden input which you update on submit to send the full international number. Try submitting a valid number below, and then check the 'phone-full' parameter in the URL.</p>
 
@@ -53,7 +53,7 @@ $(&quot;form&quot;).submit(function() {
 
     <script src="../js/prism.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-    <script src="../../build/js/intlTelInput.js?1474679003197"></script>
-    <script src="../js/hiddenInput.js?1474679003197"></script>
+    <script src="../../build/js/intlTelInput.js?1475868671107"></script>
+    <script src="../js/hiddenInput.js?1475868671107"></script>
   </body>
 </html>
