--- a/demo.html
+++ b/demo.html
@@ -25,6 +25,7 @@
       // autoPlaceholder: "off",
       // dropdownContainer: "body",
       // excludeCountries: ["us"],
+      // formatOnDisplay: false,
       // geoIpLookup: function(callback) {
       //   $.get("http://ipinfo.io", function() {}, "jsonp").always(function(resp) {
       //     var countryCode = (resp && resp.country) ? resp.country : "";
@@ -33,8 +34,8 @@
       // },
       // initialCountry: "auto",
       // nationalMode: false,
-      // numberType: "MOBILE",
       // onlyCountries: ['us', 'gb', 'ch', 'ca', 'do'],
+      // placeholderNumberType: "MOBILE",
       // preferredCountries: ['cn', 'jp'],
       // separateDialCode: true,
       utilsScript: "build/js/utils.js"
