add event listener for close:countrydropdown

--- a/spec.html
+++ b/spec.html
@@ -34,6 +34,8 @@
   
   <script src="build/js/utils.js"></script>
   
+  <script src="src/spec/tests/core/closecountrydropdownEvent.js"></script>
+  
   <script src="src/spec/tests/core/countrychangeEvent.js"></script>
   
   <script src="src/spec/tests/core/dropdownShortcuts.js"></script>
