Tweak hiddenInput option to be more flexible

--- a/demo.html
+++ b/demo.html
@@ -11,7 +11,7 @@
 <body>
   <h1>International Telephone Input</h1>
   <form>
-    <input id="phone" type="tel">
+    <input id="phone" name="phone" type="tel">
     <button type="submit">Submit</button>
   </form>
 
