Add cache busting to examples JS files

--- a/examples/gen/default-country-ip.html
+++ b/examples/gen/default-country-ip.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <title>Example: Lookup user's country</title>
     <link rel="stylesheet" href="../css/prism.css">
-    <link rel="stylesheet" href="../../build/css/intlTelInput.css?1532534116027">
-    <link rel="stylesheet" href="../../build/css/demo.css?1532534116027">
+    <link rel="stylesheet" href="../../build/css/intlTelInput.css?1533313793009">
+    <link rel="stylesheet" href="../../build/css/demo.css?1533313793009">
     
 
     <!-- GOOGLE ANALYTICS -->
@@ -37,7 +37,7 @@
       callback(countryCode);
     });
   },
-  utilsScript: &quot;../../build/js/utils.js&quot; // just for formatting/placeholders etc
+  utilsScript: &quot;../../build/js/utils.js?1533313793009&quot; // just for formatting/placeholders etc
 });
 </code></pre>
 
@@ -48,7 +48,7 @@
 
     <script src="../js/prism.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-    <script src="../../build/js/intlTelInput.js?1532534116027"></script>
-    <script src="../js/defaultCountryIp.js?1532534116027"></script>
+    <script src="../../build/js/intlTelInput.js?1533313793009"></script>
+    <script src="./js/defaultCountryIp.js?1533313793009"></script>
   </body>
 </html>
