--- a/examples/gen/is-valid-number.html
+++ b/examples/gen/is-valid-number.html
@@ -4,10 +4,10 @@
     <meta charset="utf-8">
     <title>Example: Validation</title>
     <link rel="stylesheet" href="../css/prism.css">
-    <link rel="stylesheet" href="../../build/css/intlTelInput.css?1532534116027">
-    <link rel="stylesheet" href="../../build/css/demo.css?1532534116027">
+    <link rel="stylesheet" href="../../build/css/intlTelInput.css?1533313793009">
+    <link rel="stylesheet" href="../../build/css/demo.css?1533313793009">
     
-      <link rel="stylesheet" href="../css/isValidNumber.css?1532534116027">
+      <link rel="stylesheet" href="../css/isValidNumber.css?1533313793009">
     
 
     <!-- GOOGLE ANALYTICS -->
@@ -39,7 +39,7 @@
 
 // initialise plugin
 telInput.intlTelInput({
-  utilsScript: &quot;../../build/js/utils.js&quot;
+  utilsScript: &quot;../../build/js/utils.js?1533313793009&quot;
 });
 
 var reset = function() {
@@ -62,7 +62,8 @@ telInput.blur(function() {
 });
 
 // on keyup / change flag: reset
-telInput.on(&quot;keyup change&quot;, reset);</code></pre>
+telInput.on(&quot;keyup change&quot;, reset);
+</code></pre>
 
     <h2>Result</h2>
     <div id="result">
@@ -73,7 +74,7 @@ telInput.on(&quot;keyup change&quot;, reset);</code></pre>
 
     <script src="../js/prism.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-    <script src="../../build/js/intlTelInput.js?1532534116027"></script>
-    <script src="../js/isValidNumber.js?1532534116027"></script>
+    <script src="../../build/js/intlTelInput.js?1533313793009"></script>
+    <script src="./js/isValidNumber.js?1533313793009"></script>
   </body>
 </html>
