--- a/examples/gen/national-mode.html
+++ b/examples/gen/national-mode.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <title>Example: National Mode</title>
     <link rel="stylesheet" href="../css/prism.css">
-    <link rel="stylesheet" href="../../build/css/intlTelInput.css?1532534116027">
-    <link rel="stylesheet" href="../../build/css/demo.css?1532534116027">
+    <link rel="stylesheet" href="../../build/css/intlTelInput.css?1533313793009">
+    <link rel="stylesheet" href="../../build/css/demo.css?1533313793009">
     
 
     <!-- GOOGLE ANALYTICS -->
@@ -35,7 +35,7 @@
 
 input.intlTelInput({
   nationalMode: true,
-  utilsScript: &quot;../../build/js/utils.js&quot; // just for formatting/placeholders etc
+  utilsScript: &quot;../../build/js/utils.js?1533313793009&quot; // just for formatting/placeholders etc
 });
 
 // listen to &quot;keyup&quot;, but also &quot;change&quot; to update when the user selects a country
@@ -46,7 +46,8 @@ input.on(&quot;keyup change&quot;, function() {
   } else {
     output.text(&quot;Please enter a number below&quot;);
   }
-});</code></pre>
+});
+</code></pre>
 
     <h2>Result</h2>
     <div id="result">
@@ -56,7 +57,7 @@ input.on(&quot;keyup change&quot;, function() {
 
     <script src="../js/prism.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-    <script src="../../build/js/intlTelInput.js?1532534116027"></script>
-    <script src="../js/nationalMode.js?1532534116027"></script>
+    <script src="../../build/js/intlTelInput.js?1533313793009"></script>
+    <script src="./js/nationalMode.js?1533313793009"></script>
   </body>
 </html>
