--- a/examples/gen/country-sync.html
+++ b/examples/gen/country-sync.html
@@ -4,10 +4,10 @@
     <meta charset="utf-8">
     <title>Example: Country sync</title>
     <link rel="stylesheet" href="../css/prism.css">
-    <link rel="stylesheet" href="../../build/css/intlTelInput.css?1532534116027">
-    <link rel="stylesheet" href="../../build/css/demo.css?1532534116027">
+    <link rel="stylesheet" href="../../build/css/intlTelInput.css?1533313793009">
+    <link rel="stylesheet" href="../../build/css/demo.css?1533313793009">
     
-      <link rel="stylesheet" href="../css/countrySync.css?1532534116027">
+      <link rel="stylesheet" href="../css/countrySync.css?1533313793009">
     
 
     <!-- GOOGLE ANALYTICS -->
@@ -50,7 +50,7 @@ var countryData = $.fn.intlTelInput.getCountryData(),
 
 // init plugin
 telInput.intlTelInput({
-  utilsScript: &quot;../../build/js/utils.js&quot; // just for formatting/placeholders etc
+  utilsScript: &quot;../../build/js/utils.js?1533313793009&quot; // just for formatting/placeholders etc
 });
 
 // populate the country dropdown
@@ -91,7 +91,7 @@ addressDropdown.change(function() {
 
     <script src="../js/prism.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-    <script src="../../build/js/intlTelInput.js?1532534116027"></script>
-    <script src="../js/countrySync.js?1532534116027"></script>
+    <script src="../../build/js/intlTelInput.js?1533313793009"></script>
+    <script src="./js/countrySync.js?1533313793009"></script>
   </body>
 </html>
