--- a/examples/gen/hidden-input.html
+++ b/examples/gen/hidden-input.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <title>Example: Submitting the full international number using a hidden input</title>
     <link rel="stylesheet" href="../css/prism.css">
-    <link rel="stylesheet" href="../../build/css/intlTelInput.css?1532534116027">
-    <link rel="stylesheet" href="../../build/css/demo.css?1532534116027">
+    <link rel="stylesheet" href="../../build/css/intlTelInput.css?1533313793009">
+    <link rel="stylesheet" href="../../build/css/demo.css?1533313793009">
     
 
     <!-- GOOGLE ANALYTICS -->
@@ -35,7 +35,7 @@
     <h2>Code</h2>
     <pre><code class="language-javascript">$(&quot;#phone&quot;).intlTelInput({
   hiddenInput: &quot;full_phone&quot;,
-  utilsScript: &quot;../../build/js/utils.js&quot; // just for formatting/placeholders etc
+  utilsScript: &quot;../../build/js/utils.js?1533313793009&quot; // just for formatting/placeholders etc
 });
 </code></pre>
 
@@ -50,7 +50,7 @@
 
     <script src="../js/prism.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-    <script src="../../build/js/intlTelInput.js?1532534116027"></script>
-    <script src="../js/hiddenInput.js?1532534116027"></script>
+    <script src="../../build/js/intlTelInput.js?1533313793009"></script>
+    <script src="./js/hiddenInput.js?1533313793009"></script>
   </body>
 </html>
