--- a/examples/gen/modify-country-data.html
+++ b/examples/gen/modify-country-data.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <title>Example: Modify country data</title>
     <link rel="stylesheet" href="../css/prism.css">
-    <link rel="stylesheet" href="../../build/css/intlTelInput.css?1532534116027">
-    <link rel="stylesheet" href="../../build/css/demo.css?1532534116027">
+    <link rel="stylesheet" href="../../build/css/intlTelInput.css?1533313793009">
+    <link rel="stylesheet" href="../../build/css/demo.css?1533313793009">
     
 
     <!-- GOOGLE ANALYTICS -->
@@ -34,7 +34,7 @@ $.each(countryData, function(i, country) {
   country.name = country.name.replace(/.+\((.+)\)/,&quot;$1&quot;);
 });
 $(&quot;#phone&quot;).intlTelInput({
-  utilsScript: &quot;../../build/js/utils.js&quot; // just for formatting/placeholders etc
+  utilsScript: &quot;../../build/js/utils.js?1533313793009&quot; // just for formatting/placeholders etc
 });
 </code></pre>
 
@@ -45,7 +45,7 @@ $(&quot;#phone&quot;).intlTelInput({
 
     <script src="../js/prism.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-    <script src="../../build/js/intlTelInput.js?1532534116027"></script>
-    <script src="../js/modifyCountryData.js?1532534116027"></script>
+    <script src="../../build/js/intlTelInput.js?1533313793009"></script>
+    <script src="./js/modifyCountryData.js?1533313793009"></script>
   </body>
 </html>
