--- a/demo.html
+++ b/demo.html
@@ -23,7 +23,7 @@
       // allowDropdown: false,
       // autoHideDialCode: false,
       // autoPlaceholder: "off",
-      // dropdownContainer: "body",
+      // dropdownContainer: document.body,
       // excludeCountries: ["us"],
       // formatOnDisplay: false,
       // geoIpLookup: function(callback) {
