Convert plugin wrapper/init code to pure JS

--- a/demo.html
+++ b/demo.html
@@ -19,7 +19,8 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="build/js/intlTelInput.js"></script>
   <script>
-    $("#phone").intlTelInput({
+    var input = document.querySelector("#phone");
+    window.intlTelInput(input, {
       // allowDropdown: false,
       // autoHideDialCode: false,
       // autoPlaceholder: "off",
