Inject script to load utils

--- a/demo.html
+++ b/demo.html
@@ -41,7 +41,7 @@
       // placeholderNumberType: "MOBILE",
       // preferredCountries: ['cn', 'jp'],
       // separateDialCode: true,
-      utilsScript: "build/js/utils.js"
+      utilsScript: "build/js/utils.js",
     });
   </script>
 </body>
