--- a/examples/gen/national-mode.html
+++ b/examples/gen/national-mode.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <title>Example: National Mode</title>
     <link rel="stylesheet" href="../css/prism.css">
-    <link rel="stylesheet" href="../../build/css/intlTelInput.css?1536844998850">
-    <link rel="stylesheet" href="../../build/css/demo.css?1536844998850">
+    <link rel="stylesheet" href="../../build/css/intlTelInput.css?1537705480435">
+    <link rel="stylesheet" href="../../build/css/demo.css?1537705480435">
     
 
     <!-- GOOGLE ANALYTICS -->
@@ -26,38 +26,40 @@
     <p>Allow users to enter their national number, and then convert it to international format using the public method getNumber.</p>
 
     <h2>Markup</h2>
-    <pre><code class="language-markup">&lt;p id=&quot;output&quot;&gt;Please enter a number below&lt;/p&gt;
-&lt;input id=&quot;phone&quot; type=&quot;tel&quot;&gt;</code></pre>
+    <pre><code class="language-markup">&lt;p id=&quot;output&quot;&gt;Please enter a valid number below&lt;/p&gt;
+&lt;input id=&quot;phone&quot; type=&quot;tel&quot;&gt;
+</code></pre>
 
     <h2>Code</h2>
-    <pre><code class="language-javascript">var input = $(&quot;#phone&quot;),
-  output = $(&quot;#output&quot;);
+    <pre><code class="language-javascript">var input = document.querySelector(&quot;#phone&quot;),
+  output = document.querySelector(&quot;#output&quot;);
 
-input.intlTelInput({
+var iti = window.intlTelInput(input, {
   nationalMode: true,
-  utilsScript: &quot;../../build/js/utils.js?1536844998850&quot; // just for formatting/placeholders etc
+  utilsScript: &quot;../../build/js/utils.js?1537705480435&quot; // just for formatting/placeholders etc
 });
+
+var handleChange = function() {
+  var text = (iti.isValidNumber()) ? &quot;International: &quot; + iti.getNumber() : &quot;Please enter a number below&quot;;
+  var textNode = document.createTextNode(text);
+  output.innerHTML = &quot;&quot;;
+  output.appendChild(textNode);
+};
 
 // listen to &quot;keyup&quot;, but also &quot;change&quot; to update when the user selects a country
-input.on(&quot;keyup change&quot;, function() {
-  var intlNumber = input.intlTelInput(&quot;getNumber&quot;);
-  if (intlNumber) {
-    output.text(&quot;International: &quot; + intlNumber);
-  } else {
-    output.text(&quot;Please enter a number below&quot;);
-  }
-});
+input.addEventListener(&#39;change&#39;, handleChange);
+input.addEventListener(&#39;keyup&#39;, handleChange);
 </code></pre>
 
     <h2>Result</h2>
     <div id="result">
-      <p id="output">Please enter a number below</p>
+      <p id="output">Please enter a valid number below</p>
 <input id="phone" type="tel">
+
     </div>
 
     <script src="../js/prism.js"></script>
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-    <script src="../../build/js/intlTelInput.js?1536844998850"></script>
-    <script src="./js/nationalMode.js?1536844998850"></script>
+    <script src="../../build/js/intlTelInput.js?1537705480435"></script>
+    <script src="./js/nationalMode.js?1537705480435"></script>
   </body>
 </html>
